[package]
name = "rsourcequery"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
log = "0.4.19"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "time",
  "net",
] }
